--- a/views/emails/buyer_confirmation.erb
+++ b/views/emails/buyer_confirmation.erb
@@ -1,4 +1,5 @@
 <html>
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
   <p>Hi <%= user.name %>. Thanks for your order! <br>
   <h3>What happens next?</h3>
   <p>We'll deliver your <%= item.type.downcase %> on
