--- a/views/emails/new_password.erb
+++ b/views/emails/new_password.erb
@@ -1,3 +1,4 @@
+<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
 Hi <%= user.name %>,
 Your new password is:<br>
 <b><%= user.password %></b><br>
