--- a/views/emails/seller_listing_confirmation.erb
+++ b/views/emails/seller_listing_confirmation.erb
@@ -1,4 +1,5 @@
 <html>
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
   Hi <%= current_user.name %>. Thanks for listing your <%= item.type.downcase %> with us!<br>
   <h3>What happens next?</h3>
   <p>We'll advertise your item, and as soon as there's a buyer we'll let you know, and send someone to pick it up.<br>
