--- a/views/emails/seller_payment_confirmation.erb
+++ b/views/emails/seller_payment_confirmation.erb
@@ -1,4 +1,6 @@
 <html>
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
+
 <p>All set!  You've been paid <%= To_Dollars(@order.seller_share) %> for your <%= @order.item.brand %> <%= @order.item.type %>. High Five!<br><br>
 See you back soon!<br>
 Your friends at CouchRocket</p>
