--- a/views/emails/seller_pickup_notification.erb
+++ b/views/emails/seller_pickup_notification.erb
@@ -1,4 +1,6 @@
 <html>
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
+
 	 Hi <%= seller.name %>. Your <%= item.type.downcase %> has been sold!
 	 <h3>What happens next?</h3>
 	 <ol>
