--- a/views/sales_page.erb
+++ b/views/sales_page.erb
@@ -154,3 +154,38 @@
         </div>
     </div>
     <!--=== End Illustration v2 ===-->
+
+<!-- JS Global Compulsory -->
+<script src="/assets/plugins/jquery/jquery.min.js"></script>
+<script src="/assets/plugins/jquery/jquery-migrate.min.js"></script>
+<script src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<!-- JS Implementation Plugins -->
+<script src="/assets/plugins/back-to-top.js"></script>
+<script src="/assets/plugins/owl-carousel/owl-carousel/owl.carousel.js"></script>
+<!-- Master Slider -->
+<script src="/assets/plugins/master-slider/quick-start/masterslider/masterslider.min.js"></script>
+<script src="/assets/plugins/master-slider/quick-start/masterslider/jquery.easing.min.js"></script>
+<!-- Scrollbar -->
+<script src="/assets/plugins/scrollbar/src/jquery.mousewheel.js"></script>
+<script src="/assets/plugins/scrollbar/src/perfect-scrollbar.js"></script>
+<!-- JS Customization -->
+<script src="/assets/js/custom.js"></script>
+<!-- JS Page Level -->
+<script src="/assets/js/shop.app.js"></script>
+<script src="/assets/js/plugins/owl-carousel.js"></script>
+<script src="/assets/js/plugins/master-slider.js"></script>
+<script src="/assets/js/forms/product-quantity.js"></script>
+<script>
+    jQuery(document).ready(function() {
+        App.init();
+        OwlCarousel.initOwlCarousel();
+        MasterSliderShowcase2.initMasterSliderShowcase2();
+    });
+</script>
+
+<!--[if lt IE 9]>
+    <script src="/assets/plugins/respond.js"></script>
+    <script src="/assets/plugins/html5shiv.js"></script>
+    <script src="/assets/js/plugins/placeholder-IE-fixes.js"></script>
+<![endif]-->
+
