--- a/views/emails/seller_payment_details_request.erb
+++ b/views/emails/seller_payment_details_request.erb
@@ -1,4 +1,6 @@
 <html>
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
+
   Hi <%= order.seller_name %>. Your <%= order.item.type.downcase %> has sold!<br>
 	<p>To get paid, go here to enter your <a href="http://<%= settings.domain %>/SellerPaymentDetails/<%= order.id %>">payment details</a>.
 	<br><br>
