--- a/views/emails/shipper.erb
+++ b/views/emails/shipper.erb
@@ -1,3 +1,5 @@
+	<image src="http://i.imgur.com/2FnBV5f.png"><br><br>
+
 Hi <%= order.shipper_name %>,<br><br>
 
 On <%= order.target_delivery_date.strftime('%A, %B %d') %><br>
