Guest Add Item -> Register working

--- a/views/register.erb
+++ b/views/register.erb
@@ -16,8 +16,8 @@
                   <% end %>
 
                   <div class="reg-header">
-                      <h2>Sign Up</h2>
-                      <p>Hey there! Tell us a bit about you.<br>Already Signed Up? Click <a href="page_login.html" >Sign In</a> to login your account.</p>
+                      <h2>Register</h2>
+                      <p>Hey there! Tell us a bit about you.<br><h4>Already Signed Up?  <a href="page_login.html">Sign In</a> to login your account.</h4></p>
                   </div>
 
                   <label>Name</label>
