--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -48,6 +48,7 @@
                           <p><%= flash[:item_added] %></p>
                         </div>
                       </div>
+                      <% flash[:item_added] = nil %>
                     <% end %>
                     <!--End Alert Classes -->
                 </div>
