--- a/views/new_item.erb
+++ b/views/new_item.erb
@@ -8,7 +8,7 @@
 
 	<form id="new_item" action="/items" method="post" accept-charset="utf-8">
 
-	<label for "item[type]">Furniture Type (Bed, Couch, etc or Enter Custom Value)</label><br>
+	<label for "item[type]">Furniture Type (Bed, Couch, etc or Enter Custom Value)</label><span class="color-red"> *</span><br></label>
 
  <input type="text" list="furniture_types" name="item[type]" form="new_item"/>
  <datalist id="furniture_types">
@@ -25,14 +25,11 @@
 	<input type="text" name="item[brand]">
 	<br><br>
 
-	<label for "item[notes]">Notes:</label><br>
-	<textarea name="item[notes]"
-	placeholder="To sell for the highest price, tell a story about what you like best about this item. What's cool or unique about it?"
-	rows="4" cols="50">
-	</textarea>
+	<label for "item[notes]">Notes:</label><span class="color-red"> *</span><br>
+	<textarea name="item[notes]" placeholder="To sell for the highest price, tell a story about what you like best about this item. What's cool or unique about it?" rows="4" cols="50"></textarea>
 	<br><br>
 
-	<label for "item[original_price]">Original Price (Estimate if unknown)</label><br>
+	<label for "item[original_price]">Original Price (Estimate if unknown)</label><span class="color-red"> *</span><br>
 	<input type ="integer" name="item[original_price]" label="Original Price"
 	pattern="^\\$?(([1-9](\\d*|\\d{0,2}(,\\d{3})*))|0)(\\.\\d{1,2})?$"
 	placeholder="100.00" value="<%= @item.original_price %>"
@@ -40,7 +37,7 @@
 	>
 
 	<br><br>
-	<label for "item[asking_price]">Asking Price</label><br>
+	<label for "item[asking_price]">Asking Price</label><span class="color-red"> *</span><br>
 	<input type ="integer" name="item[asking_price]"
 	placeholder="80.00"
 	value="<%= @item.asking_price %>">
@@ -49,7 +46,7 @@
 	Attach up to 3 files. Each one can be up to 10 mb.</p>
 
 	<input class="btn-u btn-u-sea rounded" type="filepicker" name="item[picture1_url]" data-fp-button-text="Upload Image 1" data-fp-apikey="ALeZw9de5TTGfo53U9bfRz" data-fp-mimetypes="image/*" data-fp-container="modal" data-fp-maxsize="10485760"
-	onchange="SuccessAlert()">
+	onchange="SuccessAlert()"><span class="color-red"> *</span>
 	<br><br>
 	<input class="btn-u btn-u-sea rounded" type="filepicker" name="item[picture2_url]" data-fp-button-text="Upload Image 2" data-fp-apikey="ALeZw9de5TTGfo53U9bfRz" data-fp-mimetypes="image/*" data-fp-container="modal" data-fp-maxsize="10485760"
 	onchange="SuccessAlert()">
@@ -73,7 +70,7 @@
 	<% end %>
 
 	<div class="form-row">
-	<label for "pickup_notes">Pickup Notes:</label><br>
+	<label for "pickup_notes">Pickup Notes:</label><span class="color-red"> *</span><br>
 	<textarea name="pickup_notes"
 	placeholder="What do we need to tell our delivery person about how to find your place or contact you? Apartment building or a house?  Is there a gate code? Do you have a dog that may not like strangers?  etc. Thanks!"
 	rows="4" cols="50"></textarea>
