--- a/views/register.erb
+++ b/views/register.erb
@@ -1,7 +1,7 @@
   <!--=== Content Part ===-->
   <div class="container content-md">
       <div class="row">
-          <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+          <div class="col-md-6 col-md-offset-3 col-sm-8 col                                                                       n-sm-offset-2">
               <form class="reg-page" id="registration-form" action="/register" method="post" accept-charset="utf-8">
 
                   <% if user.errors.any? %>
@@ -17,7 +17,7 @@
 
                   <div class="reg-header">
                       <h2>Register</h2>
-                      <p>Hey there! Tell us a bit about you.<br><h4>Already Signed Up?  <a href="page_login.html">Sign In</a> to login your account.</h4></p>
+                      <p>Hey there! Tell us a bit about you.<br><h4>Already Signed Up?  <a href="/sessions/new">Sign In</a> to login your account.</h4></p>
                   </div>
 
                   <label>Name</label>
